Fix Compatibility issues With MySQL 8.4.2 and OpenMRS Platform 2.6.9