@@ -1,3 +1,5 @@
 #!/bin/bash
 
 export JAVA_OPTS="-Dorg.openmrs.module.debezium.snapshotOnly"
+export JAVA_OPTS="-Dfile.encoding=UTF-8 -server -Djava.awt.headless=true -XX:+UseConcMarkSweepGC -Xms1536m -Xmx6144m -XX:PermSize=768m -XX:MaxPermSize=1024m -Duser.timezone=Africa/Maputo"
+export OPENMRS_RUNTIME_PROPERTIES_FILE='/usr/local/tomcat/openmrs-runtime.properties'
